--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,6 @@
             "email": "tomnattle@qq.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+	"prefer-stable": true,
 }
