--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
             "email": "tomnattle@qq.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
 	"prefer-stable": true,
 }
